--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,6 @@
     @apply text-gray-600 hover:text-purple-700
   }
   .submenuText{
-    @apply text-gray-600 hover:text-purple-700 text-start 
+    @apply text-gray-600 hover:text-purple-700 text-start px-10
   }
 }
-
-/* px-10 */
