--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,6 @@
   }
   
   .studentInputClass{
-    @apply block w-full p-3 mt-2 text-sm border rounded-lg shadow-sm bg-slate-100 placeholder-slate-300 border-slate-400 focus:outline-none focus:ring focus:ring-indigo-100 hover:border-indigo-800
+    @apply block w-full p-3 mt-2 text-sm border rounded-lg shadow-sm bg-[#FAFAFA] placeholder-slate-300 border-purple-300 focus:outline-none focus:ring focus:ring-indigo-100 hover:border-indigo-800
   }
 }
