--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,10 @@
   .submenuIcon {
     @apply text-[18px] text-gray-500;
   }
-  
-  .studentInputClass{
-    @apply block w-full p-3 mt-2 text-sm border rounded-lg shadow-sm bg-[#FAFAFA] placeholder-slate-300 border-purple-300 focus:outline-none focus:ring focus:ring-indigo-100 hover:border-indigo-800
+  .studentInputClass {
+    @apply block w-full p-3 mt-2 text-sm border rounded-lg shadow-sm bg-[#FAFAFA] placeholder-slate-300 border-purple-300 focus:outline-none focus:ring focus:ring-indigo-100 hover:border-indigo-800;
+  }
+  .errorMessage {
+    @apply text-[11px] text-red-900 mt-2;
   }
 }
